--- a/sending emails via SocketIO/package.json
+++ b/sending emails via SocketIO/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.18.1",
+    "nodemon": "^2.0.19",
     "socket.io": "^4.5.1"
   }
 }
