fix(): change REST to Websockets

--- a/upvote-app-with-react-and-nodejs/client/package.json
+++ b/upvote-app-with-react-and-nodejs/client/package.json
@@ -15,6 +15,7 @@
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.1",
+    "socket.io-client": "^4.5.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
