--- a/upvote-app-with-react-and-nodejs/server/package.json
+++ b/upvote-app-with-react-and-nodejs/server/package.json
@@ -12,9 +12,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "multer": "^1.4.5-lts.1",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "socket.io": "^4.5.4"
   }
 }
