--- a/contributor-of-the-month/package.json
+++ b/contributor-of-the-month/package.json
@@ -4,7 +4,7 @@
   "description": "My Remotion video",
   "scripts": {
     "start": "remotion preview",
-    "build": "remotion render MyComp out/video.mp4",
+    "build": "npx ts-node src/scheduler.ts",
     "upgrade": "remotion upgrade",
     "test": "eslint src --ext ts,tsx,js,jsx && tsc"
   },
